ingress-examples/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "abc.com.custom.ingress"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: project-1-service
            port:
              number: 80
